loopwhile.BaggleSeeker.scala.error
Erreur de compilation :
BaggleSeeker:1: error: reassignment to val
while (estSurBiscuit=false) {
                    ^